--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,20 +31,51 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # UI Components
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
+
+  # State Management
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+
+  # Dependency Injection
+  get_it: ^7.7.0
+
+  # Network
+  dio: ^5.7.0
+  connectivity_plus: ^6.0.5
+  internet_connection_checker_plus: ^2.5.2
+
+  # Local Storage
+  shared_preferences: ^2.3.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
+  # Location & Maps
+  geolocator: ^13.0.2
+  location: ^7.0.0
+  google_maps_flutter: ^2.9.0
+
+  # Utilities
+  intl: ^0.19.0
+  logger: ^2.4.0
+  dartz: ^0.10.1
+
+  # JSON Serialization
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  # Linting
   flutter_lints: ^5.0.0
+
+  # Code Generation
+  build_runner: ^2.4.13
+  json_serializable: ^6.8.0
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,10 +88,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # Assets - Imágenes y recursos
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
